# photostory

./: .gitignore  Readme.md  download_assets.sh
example/: example.json  example_with_map.json
io_photostory/: __init__.py  helpers_geometry.py  helpers_views.py  layout.py  test_layouts.ipynb  world_map.py
io_photostory/assets/: .gitignore
photo-selector/: .gitignore  CMakeLists.txt  build.sh  generate_duplicates.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  photo-selector.pro  resources.qrc  style.qss  widget_droparea.cpp  widget_droparea.h  widget_editlist.cpp  widget_editlist.h  widget_editlist.ui  widget_gps_selector.cpp  widget_gps_selector.h  widget_gps_selector.ui  widget_slide.cpp  widget_slide.h  widget_slide_gps.cpp  widget_slide_gps.h  widget_slide_photo.cpp  widget_slide_photo.h  widget_slidecontainer.cpp  widget_slidecontainer.h
